--- a/WPF-EF-Assignment/WPF-EF-Assignment.csproj
+++ b/WPF-EF-Assignment/WPF-EF-Assignment.csproj
@@ -161,7 +161,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="ReadMe.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild"> -->
   <!-- <PropertyGroup> -->
